--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -31,7 +31,7 @@ body {
       flex-direction: column;
       justify-content: center;
       align-items: center; }
-      .app-wrapper .app-nav .nav-item.active-nav {
+      .app-wrapper .app-nav .nav-item.active {
         background-color: red; }
       .app-wrapper .app-nav .nav-item:hover {
         background-color: yellow; }
