--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -37,7 +37,7 @@ body {
 			justify-content: center;
 			align-items: center;
 
-			&.active-nav {
+			&.active {
 				background-color: red;
 			}
 
